<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <Button
            android:id="@+id/back_button"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/common_google_signin_btn_text_light"
            android:foreground="?attr/homeAsUpIndicator"
            android:foregroundTint="@color/colorAccent"
            android:textSize="20dp"></Button>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="8">

        <Button
        android:id="@+id/buttonCreateMatch"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreateMatch"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        />

        <Button
            android:id="@+id/buttonNextMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/NextMatch"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            />

        <Button
            android:id="@+id/buttonStatistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/Statistics"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            />

        <Button
            android:id="@+id/buttonMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/Map"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            />

    </LinearLayout>

</LinearLayout>