<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/matchInfoScroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_infoMatch"
    tools:context=".NextMatchesActivity"
    android:orientation="vertical"
    android:background="@drawable/padel_light_2"
    android:backgroundTintMode="src_over"
    android:backgroundTint="#5000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical"
        android:gravity="top">

        <ImageView
            android:id="@+id/create_match_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/info_partit"
            android:layout_gravity="center_horizontal"></ImageView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="top">

        <TextView
            android:id="@+id/saved_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="40dp"
            android:textColor="@color/colorWhite"
            android:layout_centerHorizontal="true"></TextView>
        <Space
            android:id="@+id/spacer_1"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_below="@+id/saved_description"></Space>

        <TextView
            android:id="@+id/ubi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ubi"
            android:textSize="25dp"
            android:textColor="#FFF"
            android:gravity="center"
            android:padding="10dp"

            android:layout_centerHorizontal="true"
            android:layout_below="@id/spacer_1"
            android:background="#9000"></TextView>
        <TextView
            android:id="@+id/saved_ubi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:layout_below="@id/ubi"
            android:layout_centerHorizontal="true"></TextView>
        <Space
            android:id="@+id/spacer_2"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/saved_ubi"></Space>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="25dp"
            android:textColor="#FFF"
            android:gravity="center"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/spacer_2"
            android:background="#9000"></TextView>
        <TextView
            android:id="@+id/saved_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:layout_below="@id/date"
            android:layout_centerHorizontal="true"></TextView>
        <Space
            android:id="@+id/spacer_3"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/saved_date"></Space>

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="25dp"
            android:textColor="#FFF"
            android:gravity="center"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/spacer_3"
            android:background="#9000"></TextView>
        <TextView
            android:id="@+id/saved_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:layout_below="@id/time"
            android:layout_centerHorizontal="true"></TextView>
        <Space
            android:id="@+id/spacer_4"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/saved_time"></Space>

        <TextView
            android:id="@+id/level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:textSize="25dp"
            android:textColor="#FFF"
            android:gravity="center"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/spacer_4"
            android:background="#9000"></TextView>
        <TextView
            android:id="@+id/saved_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:layout_below="@id/level"
            android:layout_centerHorizontal="true"></TextView>
        <Space
            android:id="@+id/spacer_5"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/saved_level"></Space>

        <TextView
            android:id="@+id/players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/players"
            android:textSize="25dp"
            android:textColor="#FFF"
            android:gravity="center"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/spacer_5"
            android:background="#9000"></TextView>
        <TextView
            android:id="@+id/saved_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:layout_below="@id/players"
            android:layout_centerHorizontal="true"></TextView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">
        <Button
            android:id="@+id/exit_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_alignParentBottom="true"
            android:text="@string/exit"
            android:textSize="30dp"
            android:background="#6AFB84"></Button>

        <Button
            android:id="@+id/delete_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_weight="2"
            android:text="@string/delete"
            android:textSize="30dp"
            android:background="#FB6A6A"></Button>


    </LinearLayout>
</LinearLayout>
</ScrollView>