<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/acces_background_light"
    android:backgroundTintMode="src_over"
    android:backgroundTint="#5000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/back_button_login"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/common_google_signin_btn_text_light"
            android:foreground="?attr/homeAsUpIndicator"
            android:foregroundTint="@color/colorAccent"
            android:textSize="20dp"></Button>

        <ImageView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/accedir_text"
            android:layout_gravity="center_horizontal"></ImageView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="30dp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_above="@+id/user"
            android:layout_alignStart="@+id/user"
            android:layout_alignLeft="@+id/user">
        </TextView>

        <EditText
            android:id="@+id/user"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="#CCC">
        </EditText>

        <Space
            android:id="@+id/spacer_1"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/user"></Space>

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="30dp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_below="@+id/spacer_1"
            android:layout_alignStart="@+id/user"
            android:layout_alignLeft="@+id/user">
        </TextView>

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="#CCC"
            android:layout_below="@id/password_text"
            android:layout_centerInParent="true"
            android:inputType="textPassword">
        </EditText>

        <Space
            android:id="@+id/spacer_2"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/password"></Space>

        <CheckBox
            android:id="@+id/remember_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:layout_below="@id/spacer_2"
            android:layout_centerInParent="true"
            android:text="@string/remember"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="20dp"
            android:background="#709F"></CheckBox>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/enter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:textSize="50dp"
            android:background="#6AFB84"></Button>
    </LinearLayout>

</LinearLayout>