<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_createMatch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateMatchActivity"
    android:orientation="vertical"
    android:background="@drawable/padel_light_2"
    android:backgroundTintMode="src_over"
    android:backgroundTint="#5000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="top">

        <Button
            android:id="@+id/back_button_main_create"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/common_google_signin_btn_text_light"
            android:foreground="?attr/homeAsUpIndicator"
            android:foregroundTint="@color/colorAccent"
            android:textSize="20dp"></Button>

        <ImageView
            android:id="@+id/create_match_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/crear_partit_text"
            android:layout_gravity="center_horizontal"></ImageView>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="top">

        <EditText
            android:id="@+id/description_editText"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:background="#CCC"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="10dp"
            android:textColor="#000"
            android:padding="5dp"
            android:textSize="20dp"
            android:textAlignment="viewStart"
            android:gravity="start" />
        <TextView
            android:paddingLeft="10dp"
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="25dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_alignBaseline="@id/description_editText"></TextView>

        <Space
            android:id="@+id/spacer_1"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/description_editText"></Space>

        <EditText
            android:id="@+id/ubication_editText"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@+id/spacer_1"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="10dp"
            android:background="#CCC"
            android:drawableRight="@android:drawable/ic_dialog_map"
            android:drawableTint="#03A9F4"
            android:padding="5dp"
            android:textColor="#000"
            android:textSize="20dp"></EditText>

        <TextView
            android:paddingLeft="10dp"
            android:id="@+id/ubication_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ubi"
            android:textSize="25dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_alignBaseline="@+id/ubication_editText"></TextView>

        <Space
            android:id="@+id/spacer_2"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/ubication_editText"></Space>

        <EditText
            android:id="@+id/date_editText"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="#CCC"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/spacer_2"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="10dp"
            android:textColor="#000"
            android:padding="5dp"
            android:textSize="20dp"></EditText>

        <TextView
            android:paddingLeft="10dp"
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="25dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_alignBaseline="@+id/date_editText"></TextView>
        <Space
            android:id="@+id/spacer_3"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/date_editText"></Space>

        <EditText
            android:id="@+id/time_editText"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="#CCC"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/spacer_3"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="10dp"
            android:textColor="#000"
            android:padding="5dp"
            android:textSize="20dp"></EditText>
        <TextView
            android:paddingLeft="10dp"
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="25dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_alignBaseline="@+id/time_editText"></TextView>
        <Space
            android:id="@+id/spacer_4"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/time_editText"></Space>

        <Spinner
            android:id="@+id/level_spinner"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="#CCC"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/spacer_4"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="10dp"
            android:textColor="#000"
            android:padding="5dp"
            android:textSize="20dp"></Spinner>

        <EditText
            android:id="@+id/level_editText"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="#CCC"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/spacer_4"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="10dp"
            android:textColor="#000"
            android:padding="5dp"
            android:textSize="20dp"
            android:visibility="invisible"></EditText>

        <TextView
            android:paddingLeft="10dp"
            android:id="@+id/level_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:textSize="25dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_alignBaseline="@+id/level_editText"></TextView>

        <Space
            android:id="@+id/spacer_5"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/level_editText"></Space>

        <EditText
            android:id="@+id/players_editText"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="#CCC"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/spacer_5"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="10dp"
            android:inputType="number"
            android:textColor="#000"
            android:padding="5dp"
            android:textSize="20dp"></EditText>

        <TextView
            android:paddingLeft="10dp"
            android:id="@+id/players_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/players"
            android:textSize="25dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_alignBaseline="@+id/players_editText"></TextView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textSize="50dp"
            android:background="#6AFB84"></Button>
    </LinearLayout>
</LinearLayout>